add a new foler

--- a/html-css/Module01/homework/index.html
+++ b/html-css/Module01/homework/index.html
@@ -1,10 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Blog</title>
 </head>
 <body>
+<div class="warpper">
+                                <!--Это шапка сайта-->
+<div class="header">
+<div>
+    <ul>
+    <li><a href="#">lifestyle</a></li>
+    <li><a href="#">photodiary</a></li>
+    <li><a href="#">music</a></li>
+    <li><a href="#">travel</a></li>
+    </ul>
+</div>
+</div>
+                            <!--Это главная часть сайт -->
+<div class="main">
+<div>
+    <ul>
+        <li>
+            <img src="./img/image-1.jpg" width="700" height="480" alt="hi">
+            <p>lifestyle</p>
+        <h2>More than just a music fesifal</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
+        </li>
+    </ul>
+</div>
+    <div>
+    <ul>
+        <li>
+            <img src="./img/image-2.jpg" width="700" height="480" alt="hello">
+            <p>lifestyle</p>
+            <h2>Life tastes better with cofee</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
+        </li>
+    </ul>
+</div>
 
+
+    <div>
+        <ul>
+            <li>
+                <img src="./img/image-3.jpg" width="700" height="480" alt="hi">
+                <p>lifestyle</p>
+                <h2>American dream</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li>
+                <img src="./img/image-4.jpg" width="700" height="480" alt="hi">
+                <p>lifestyle</p>
+                <h2>A day exploring the Alps</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
+            </li>
+        </ul>
+    </div>
+    <div>
+    <ul>
+        <li>
+            <img src="./img/image-5.jpg" width="700" height="480" alt="hi">
+            <p>lifestyle</p>
+            <h2>Top 10 song for running</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
+        </li>
+    </ul>
+</div>
+    <div>
+        <ul>
+            <li>
+                <img src="./img/image-6.jpg" width="700" height="480" alt="hi">
+                <p>lifestyle</p>
+                <h2>Cold winter days</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
+            </li>
+        </ul>
+    </div>
+</div>
+<button>Load more</button>
+                                <!--Подвал-->
+    <div class="footer">
+    </div>
+</div>
 </body>
 </html>
