--- a/html-css/Module01/homework/index.html
+++ b/html-css/Module01/homework/index.html
@@ -8,9 +8,9 @@
     <title>My Blog</title>
 </head>
 <body>
-<div class="warpper">
+<main class="warpper">
                                 <!--Это шапка сайта-->
-<div class="header">
+<header>
 <div>
     <ul>
     <li><a href="#">lifestyle</a></li>
@@ -19,31 +19,25 @@
     <li><a href="#">travel</a></li>
     </ul>
 </div>
-</div>
+</header>>
                             <!--Это главная часть сайт -->
-<div class="main">
+<main>
 <div>
-    <ul>
-        <li>
+    <article>
             <img src="./img/image-1.jpg" width="700" height="480" alt="hi">
             <p>lifestyle</p>
         <h2>More than just a music fesifal</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-        </li>
-    </ul>
+    </article>
 </div>
     <div>
-    <ul>
-        <li>
+    <article>
             <img src="./img/image-2.jpg" width="700" height="480" alt="hello">
             <p>lifestyle</p>
             <h2>Life tastes better with cofee</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-        </li>
-    </ul>
+    </article>
 </div>
-
-
     <div>
         <ul>
             <li>
@@ -84,11 +78,11 @@
             </li>
         </ul>
     </div>
-</div>
-<button>Load more</button>
+</main>
                                 <!--Подвал-->
-    <div class="footer">
-    </div>
+    <footer>
+        <button>Load more</button>
+    </footer>>
 </div>
 </body>
 </html>
