--- a/html-css/Module01/homework/index.html
+++ b/html-css/Module01/homework/index.html
@@ -11,14 +11,14 @@
 <main class="warpper">
                                 <!--Это шапка сайта-->
 <header>
-<div>
+<nav>
     <ul>
     <li><a href="#">lifestyle</a></li>
     <li><a href="#">photodiary</a></li>
     <li><a href="#">music</a></li>
     <li><a href="#">travel</a></li>
     </ul>
-</div>
+</nav>
 </header>>
                             <!--Это главная часть сайт -->
 <main>
