--- a/html-css/Module01/homework/index.html
+++ b/html-css/Module01/homework/index.html
@@ -8,7 +8,7 @@
     <title>My Blog</title>
 </head>
 <body>
-<main class="warpper">
+<div class="wrapper">
                                 <!--Это шапка сайта-->
 <header>
 <nav>
@@ -19,9 +19,8 @@
     <li><a href="#">travel</a></li>
     </ul>
 </nav>
-</header>>
+</header>
                             <!--Это главная часть сайт -->
-<main>
 <div>
     <article>
             <img src="./img/image-1.jpg" width="700" height="480" alt="hi">
@@ -29,15 +28,12 @@
         <h2>More than just a music fesifal</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
     </article>
-</div>
-    <div>
     <article>
             <img src="./img/image-2.jpg" width="700" height="480" alt="hello">
             <p>lifestyle</p>
             <h2>Life tastes better with cofee</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
     </article>
-</div>
     <div>
         <ul>
             <li>
@@ -78,11 +74,11 @@
             </li>
         </ul>
     </div>
-</main>
+</div>
                                 <!--Подвал-->
     <footer>
         <button>Load more</button>
-    </footer>>
+    </footer>
 </div>
 </body>
 </html>
