--- a/html-css/Module01/homework/index.html
+++ b/html-css/Module01/homework/index.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
     <!--Это главная часть сайт -->
+    <main>
     <article>
         <img src="./img/image-1.jpg" width="700" height="480" alt="hi">
         <p>lifestyle</p>
@@ -33,50 +34,35 @@
         <h2>Life tastes better with cofee</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
     </article>
-    <div>
-        <ul>
-            <li>
+    <article>>
                 <img src="./img/image-3.jpg" width="700" height="480" alt="hi">
                 <p>lifestyle</p>
                 <h2>American dream</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </li>
-        </ul>
-    </div>
-    <div>
-        <ul>
-            <li>
+    </article>
+        <article>
                 <img src="./img/image-4.jpg" width="700" height="480" alt="hi">
                 <p>lifestyle</p>
                 <h2>A day exploring the Alps</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </li>
-        </ul>
-    </div>
-    <div>
-        <ul>
-            <li>
+        </article>
+        <article>
                 <img src="./img/image-5.jpg" width="700" height="480" alt="hi">
                 <p>lifestyle</p>
                 <h2>Top 10 song for running</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </li>
-        </ul>
-    </div>
-    <div>
-        <ul>
-            <li>
+        </article>
+        <article>
                 <img src="./img/image-6.jpg" width="700" height="480" alt="hi">
                 <p>lifestyle</p>
                 <h2>Cold winter days</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </li>
-        </ul>
-    </div>
-</div>
+        </article>
+</main>
 <!--Подвал-->
 <footer>
     <button>Load more</button>
 </footer>
+</div>
 </body>
 </html>
