--- a/html-css/Module01/homework/index.html
+++ b/html-css/Module01/homework/index.html
@@ -8,7 +8,7 @@
     <title>My Blog</title>
 </head>
 <body>
-<div class="wrapper">
+<wrapper>
     <!--Это шапка сайта-->
     <header>
         <nav>
@@ -63,6 +63,6 @@
 <footer>
     <button>Load more</button>
 </footer>
-</div>
+</wrapper>>
 </body>
 </html>
