--- a/html-css/Module01/homework/index.html
+++ b/html-css/Module01/homework/index.html
@@ -8,8 +8,10 @@
     <title>My Blog</title>
 </head>
 <body>
+<!--wrapper>header+main+footer-->
 <wrapper>
     <!--Это шапка сайта-->
+    <!--nav>ul>li*4>a{Item $}-->
     <header>
         <nav>
             <ul>
@@ -20,7 +22,8 @@
             </ul>
         </nav>
     </header>
-    <!--Это главная часть сайт -->
+    <!--Это главная часть сайтa и чуток подвала -->
+    <!--main>aricle*4>img[width height]+p+h2+p^^footer>button-->
     <main>
     <article>
         <img src="./img/image-1.jpg" width="700" height="480" alt="hi">
