--- a/html-css/Module03/homework/index.html
+++ b/html-css/Module03/homework/index.html
@@ -6,10 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Blog</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!--wrapper>header+main+footer-->
-<wrapper>
+<div class="wrapper">
     <!--Это шапка сайта-->
     <!--nav>ul>li*4>a{Item $}-->
     <header>
@@ -26,37 +27,37 @@
     <!--main>aricle*4>img[width height]+p+h2+p^^footer>button-->
     <main>
     <article>
-        <img src="./img/image-1.jpg" width="700" height="480" alt="hi">
+        <img src="./img/image-1.jpg" width="300" height="300" alt="hi">
         <p>lifestyle</p>
         <h2>More than just a music fesifal</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
     </article>
     <article>
-        <img src="./img/image-2.jpg" width="700" height="480" alt="hello">
+        <img src="./img/image-2.jpg" width="300" height="300" alt="hello">
         <p>lifestyle</p>
         <h2>Life tastes better with cofee</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
     </article>
-    <article>>
-                <img src="./img/image-3.jpg" width="700" height="480" alt="hi">
+    <article>
+                <img src="./img/image-3.jpg" width="300" height="300" alt="hi">
                 <p>lifestyle</p>
                 <h2>American dream</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
     </article>
         <article>
-                <img src="./img/image-4.jpg" width="700" height="480" alt="hi">
+                <img src="./img/image-4.jpg" width="300" height="300" alt="hi">
                 <p>lifestyle</p>
                 <h2>A day exploring the Alps</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
         </article>
         <article>
-                <img src="./img/image-5.jpg" width="700" height="480" alt="hi">
+                <img src="./img/image-5.jpg" width="300" height="300" alt="hi">
                 <p>lifestyle</p>
                 <h2>Top 10 song for running</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
         </article>
         <article>
-                <img src="./img/image-6.jpg" width="700" height="480" alt="hi">
+                <img src="./img/image-6.jpg" width="300" height="300" alt="hi">
                 <p>lifestyle</p>
                 <h2>Cold winter days</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
@@ -66,6 +67,6 @@
 <footer>
     <button>Load more</button>
 </footer>
-</wrapper>
+</div>
 </body>
 </html>
