--- a/html-css/Module03/index.html
+++ b/html-css/Module03/index.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<div class="wrapper">
+    <header>
+        <span>2</span>
+    </header>
+    <nav>
+        <span>nav</span>
+    </nav>
+    <aside >
+        sidebar
+    </aside>
+    <content>
+        content
+    </content>
+    <footer>
+        footer
+    </footer>
+</div>
 </body>
 </html>
