--- a/html-css/Module 04/homework/index.html
+++ b/html-css/Module 04/homework/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!--wrapper>header+main+footer-->
-<div>
+<div class="wrap1">
     <!--Это шапка сайта-->
     <!--nav>ul>li*4>a{Item $}-->
     <header>
@@ -28,52 +28,40 @@
     <!--main>aricle*4>img[width height]+p+h2+p^^footer>button-->
     <main>
         <article>
-            <div class="container">
             <img src="./img/image-1.jpg" width="420" height="280" alt="hi">
             <p class="list">lifestyle</p>
             <h2>More than just a music festifal</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </div>
         </article>
         <article>
-            <div class="container">
             <img src="./img/image-2.jpg" width="419" height="280" alt="hello">
             <p class="list">lifestyle</p>
             <h2>Life tastes better with cofee</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </div>
         </article>
         <article>
-            <div class="container">
             <img src="./img/image-3.jpg" width="420" height="280" alt="hi">
             <p class="list">lifestyle</p>
             <h2>American dream</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </div>
         </article>
         <article>
-            <div class="container">
             <img src="./img/image-4.jpg" width="419" height="280" alt="hi">
             <p class="list">lifestyle</p>
             <h2>A day exploring the Alps</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </div>
         </article>
         <article>
-            <div class="container">
             <img src="./img/image-5.jpg" width="420" height="280" alt="hi">
             <p class="list">lifestyle</p>
             <h2>Top 10 song for running</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </div>
-        </article>
+                   </article>
         <article>
-            <div class="container">
             <img src="./img/image-6.jpg" width="419" height="280" alt="hi">
             <p class="list">lifestyle</p>
             <h2>Cold winter days</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis ipsa necessitatibus porro quae. Est ex fuga laboriosam maxime mollitia nesciunt numquam obcaecati qui saepe voluptate. Cupiditate doloremque nam velit.</p>
-            </div>
         </article>
     </main>
     <!--Подвал-->
