--- a/html-css/12.03.18/homework/index.html
+++ b/html-css/12.03.18/homework/index.html
@@ -96,7 +96,7 @@
             <header class="header2">
                 <h2 class="title title-news">latest news</h2>
             </header>
-        <div class="news-news">
+        <div class="news-news clearfix">
             <article class="news-photo">
                 <img src="./img/news1.png" alt="news" class="news-image">
                 <h3 class="news-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci</h3>
