--- a/html-css/Module06/Task2/homework/index.html
+++ b/html-css/Module06/Task2/homework/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HomeworkModule6</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -85,10 +86,10 @@
             <div class="photo-article">
             <article class="team-article">
                 <div class="menu-photo">
-                    <span class="icon icon-1"></span>
-                    <span class="icon icon-2"></span>
-                    <span class="icon icon-3"></span>
-                    <span class="icon icon-4"></span>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-pinterest"></i>
+                    <i class="fab fa-instagram"></i>
                 </div>
                 <img src="./img/image7.jpg" alt="item" class="team-photo">
                 <h5 class="photo-title">mattew dix</h5>
@@ -96,10 +97,10 @@
             </article>
             <article class="team-article">
                 <div class="menu-photo">
-                    <span class="icon icon-1"></span>
-                    <span class="icon icon-2"></span>
-                    <span class="icon icon-3"></span>
-                    <span class="icon icon-4"></span>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-pinterest"></i>
+                    <i class="fab fa-instagram"></i>
                 </div>
                 <img src="./img/image8.jpg" alt="item" class="team-photo">
                 <h5 class="photo-title">mattew dix</h5>
@@ -107,10 +108,10 @@
             </article>
             <article class="team-article">
                 <div class="menu-photo">
-                    <span class="icon icon-1"></span>
-                    <span class="icon icon-2"></span>
-                    <span class="icon icon-3"></span>
-                    <span class="icon icon-4"></span>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-pinterest"></i>
+                    <i class="fab fa-instagram"></i>
                 </div>
                 <img src="./img/image9.jpg" alt="item" class="team-photo">
                 <h5 class="photo-title">mattew dix</h5>
@@ -120,11 +121,14 @@
         </section>
     </div>
     <!--Подвал-->
-    <footer>
-        <div class="container container-footer">
-        <p class="footer-text">cprght 2016 MoGo free PSD template by <a href="#" class="footer-link">Lasqiq</a></p>
-        <button class="btn-footer">subscribe</button>
+    <footer class="footer">
+        <div class="container-footer">
+        <p class="footer-text">&#169; 2016 MoGo free PSD template by <a href="#" class="footer-link">Lasqiq</a></p>
         </div>
+        <form action="#" class="email">
+            <input class="text-email" type="email" placeholder="Your Email...">
+            <input class="btn-email" type="button" value="subscribe">
+        </form>
     </footer>
 </div>
 </body>
